5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1838_1278.log
== TEST (2019-06-24 22:40:03) 
-- CODE:
m= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= input("Digite cidade1: ")
c2= input("Digite cidade 2: ")
print(c[i])
#print(c[0])
#print(c2[0])
v1=int(c[0])-1
v2= int(c2[0])-1
#print(m[v1][v2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(c[i])
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 22:40:29) 
-- CODE:
m= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

c= input("Digite cidade1: ")
c2= input("Digite cidade 2: ")

#print(c[0])
#print(c2[0])
v1=int(c[0])-1
v2= int(c2[0])-1
print(m[v1][v2])
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:25:33) 
-- CODE:
from numpy import*

m= [
	[0,2,11,6,15,11,1],
	[2,0,7,12,4,2,15],
	[11,7,0,11,8,3,13],
	[6,12,11,0,10,2,1],
	[15,4,8,10,0,5,13],
	[11,2,3,2,5,0,14],
	[1,15,13,1,13,14,0]]

s=0
a = int(input())
i = (a%10)-1
j = (a%10)-1
while(a!= -1):
	s = s+ m[i,j]
	i=j
	a = int(input("k: "))
	j = (a%10)-1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:27:25) 
-- CODE:
from numpy import*

m= [[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]]

s=0
a = int(input())
i = (a%10)-1
j = (a%10)-1
while(a!= -1):
	s = s+m[i,j]
	i=j
	a = int(input("k: "))
	j = (a%10)-1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:28:53) 
-- CODE:
from numpy import*

m= ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

s=0
a = int(input())
i = (a%10)-1
j = (a%10)-1
while(a!= -1):
	s = s+m[i,j]
	i=j
	a = int(input("k: "))
	j = (a%10)-1
print(s)

-- EXECUTION TIME:
1.24419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1278/main.py", line 10, in <module>
    s = s+m[i,j]
TypeError: list indices must be integers, not tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:28:59) 
-- CODE:
from numpy import*

m= ([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

s=0
a = int(input())
i = (a%10)-1
j = (a%10)-1
while(a!= -1):
	s = s+m[i,j]
	i=j
	a = int(input("k: "))
	j = (a%10)-1
print(s)

-- EXECUTION TIME:
1.0539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1278/main.py", line 10, in <module>
    s = s+m[i,j]
TypeError: list indices must be integers, not tuple

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:29:32) 
-- CODE:
from numpy import*

m= array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

s=0
a = int(input())
i = (a%10)-1
j = (a%10)-1
while(a!= -1):
	s = s+m[i,j]
	i=j
	a = int(input("k: "))
	j = (a%10)-1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:29:42) 
-- CODE:
from numpy import*

m= array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

s=0
a = int(input())
i = (a%10)-1
j = (a%10)-1
while(a!= -1):
	s = s+m[i,j]
	i=j
	a = int(input("k: "))
	j = (a%10)-1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:29:44) 
-- CODE:
from numpy import*

m= array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

s=0
a = int(input())
i = (a%10)-1
j = (a%10)-1
while(a!= -1):
	s = s+m[i,j]
	i=j
	a = int(input("k: "))
	j = (a%10)-1
print(s)

-- EXECUTION TIME:
1.14935
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
k: k: k: k: k: k: k: k: 57
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:30:02) 
-- CODE:
from numpy import*

m= array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

s=0
a = int(input())
i = (a%10)-1
j = (a%10)-1
while(a!= -1):
	s = s+m[i,j]
	i=j
	a = int(input("k: "))
	j = (a%10)-1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:30:06) 
-- CODE:
from numpy import*

m= array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

s=0
a = int(input())
i = (a%10)-1
j = (a%10)-1
while(a!= -1):
	s = s+m[i,j]
	i=j
	a = int(input("k: "))
	j = (a%10)-1
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:30:23) 
-- CODE:
from numpy import*

m= array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

s=0
a = int(input())
i = (a%10)-1
j = (a%10)-1
while(a!= -1):
	s = s+m[i,j]
	i=j
	a = int(input("k: "))
	j = (a%10)-1
print(s)

-- EXECUTION TIME:
1.24143
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
